Fixed: Bug 32287 - OX Drive icon view: folders overlap icon area on small displays, and other problems

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -3832,9 +3832,9 @@ input.flat-input {
     }
 
     .window-sidepanel.visible {
-        bottom: 40px;
-        width: auto;
-        right: 0;
+        width: auto !important;
+        right: 0 !important;
+        .resizebar { display: none; }
     }
 
     .window-body {
